[gd_scene load_steps=10 format=3 uid="uid://c7onwsk0sik8q"]

[ext_resource type="Script" uid="uid://bd6edutjwqu77" path="res://scripts/main_scene/post_office.gd" id="1_7vu2t"]
[ext_resource type="PackedScene" uid="uid://c5cdhw2a4u0mt" path="res://import/post-office.glb" id="1_t4qjs"]
[ext_resource type="PackedScene" uid="uid://cwecakeec8hdj" path="res://scenes/hostage.tscn" id="2_yv1ri"]
[ext_resource type="Script" uid="uid://brt4otgn2jol1" path="res://addons/locker/scripts/storage_accessor/storage_accessor.gd" id="3_ibcgh"]
[ext_resource type="Script" uid="uid://dtvohndbwyieq" path="res://addons/locker/scripts/storage_accessor/storage_accessor_version.gd" id="4_f3cdo"]
[ext_resource type="Script" uid="uid://b2tl1iieiad8p" path="res://scripts/locker/post_office_accessor_v1.gd" id="5_1hob2"]

[sub_resource type="Resource" id="Resource_0b11a"]
script = ExtResource("5_1hob2")
number = "1.0.0"
metadata/_custom_type_script = "uid://b2tl1iieiad8p"

[sub_resource type="BoxShape3D" id="BoxShape3D_7vu2t"]
size = Vector3(9.63108, 0.208435, 2.97415)

[sub_resource type="Curve3D" id="Curve3D_t4qjs"]
_data = {
"points": PackedVector3Array(0, 0, 0, 0, 0, 0, 0, 0, 0, -0.362963, 9.76585e-06, 0.396952, 0.362963, -9.76585e-06, -0.396952, 0.921172, 0.01, -0.2809, 0, 0, 0, 0, 0, 0, 0.983733, 0.1, -1.40658),
"tilts": PackedFloat32Array(0, 0, 0)
}
point_count = 3

[node name="post-office" type="Node3D"]
script = ExtResource("1_7vu2t")
hostage_scene = ExtResource("2_yv1ri")

[node name="LokStorageAccessor" type="Node" parent="." groups=["lok_storage"]]
script = ExtResource("3_ibcgh")
id = "post_office"
versions = Array[ExtResource("4_f3cdo")]([SubResource("Resource_0b11a")])
dependency_paths = {
"way_in": NodePath("../way_in")
}
metadata/_custom_type_script = "uid://brt4otgn2jol1"

[node name="post-office-model" parent="." instance=ExtResource("1_t4qjs")]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, 0, 0)

[node name="landing_area" type="StaticBody3D" parent="."]
collision_layer = 8
collision_mask = 31

[node name="CollisionShape3D" type="CollisionShape3D" parent="landing_area"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.891604, 0.00430298, 0.160965)
shape = SubResource("BoxShape3D_7vu2t")

[node name="way_in" type="Path3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.5, 0, 0.382)
curve = SubResource("Curve3D_t4qjs")

[node name="PathTemplate" type="PathFollow3D" parent="way_in"]
transform = Transform3D(0.291672, -0.00993148, -0.956446, -9.31305e-10, 0.99993, -0.0103829, 0.956499, 0.00302848, 0.291656, 0, 0, 0)

[node name="Timer" type="Timer" parent="."]

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
